--- a/Breaking/app/src/main/res/layout/activity_main.xml
+++ b/Breaking/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,12 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-<!--        <androidx.appcompat.widget.Toolbar-->
-<!--            android:id="@+id/tool_bar"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:theme="?attr/actionBarTheme"-->
-<!--            android:background="@color/breaking_color"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent">-->
-<!--        </androidx.appcompat.widget.Toolbar>-->
-
         <FrameLayout
             android:id="@+id/fl_board"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintHeight_percent="0.94"
+            app:layout_constraintVertical_bias="0"
             app:layout_constraintBottom_toBottomOf="@id/bnv_main"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,11 +28,12 @@
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bnv_main"
             android:layout_width="0dp"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="0dp"
             app:itemBackground="@color/breaking_color"
             app:itemIconTint="@drawable/bottom_icon_color"
             app:itemTextColor="@color/white"
             app:labelVisibilityMode="labeled"
+            app:layout_constraintTop_toBottomOf="@id/fl_board"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +45,7 @@
         android:id="@+id/view_navigation_drawer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:itemIconPadding="40dp"
         app:itemIconSize="25dp"
