--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -30,15 +30,17 @@
             android:gravity="center"
             android:theme="@style/FormButton"
             android:text="@string/post_home_btn"
+            android:textSize="11sp"
             android:textColor="@color/breaking_color"
             android:textStyle="bold"
             android:textAppearance="@style/AppTextAppearance.Button"
             android:backgroundTint="@color/main_post_button_color"
-            android:layout_marginBottom="80dp"
             app:strokeColor="@color/breaking_drawer_color"
-            app:layout_constraintWidth_percent="0.3"
+            app:layout_constraintWidth_percent="0.27"
             app:layout_constraintHeight_percent="0.06"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.98"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
            />
