--- a/Breaking/app/src/main/res/layout/activity_follow.xml
+++ b/Breaking/app/src/main/res/layout/activity_follow.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_following"
+            android:overScrollMode="never"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scrollbarAlwaysDrawVerticalTrack="true"
