--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -6,45 +6,155 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/general_toolbar_layout" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".fragment.NaviChartFragment">
 
-        <TextView
-            android:id="@+id/tv_main"
+        <Button
+            android:id="@+id/btn_main_filter"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="@drawable/main_button_background"
+            android:drawableStart="@drawable/ic_baseline_tune_24"
+            android:padding="5dp"
+            android:text="@string/filter"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.04"
+            app:layout_constraintHorizontal_bias="0.05"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/top_divider"
+            app:layout_constraintVertical_bias="0.015" />
+
+        <Button
+            android:id="@+id/btn_main_sort"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:background="@drawable/main_button_background"
+            android:drawableStart="@drawable/ic_baseline_sort_24"
+            android:padding="5dp"
+            android:text="@string/latest_order"
+            android:textSize="11sp"
+            app:layout_constraintBottom_toBottomOf="@id/btn_main_filter"
+            app:layout_constraintHeight_percent="0.04"
+            app:layout_constraintHorizontal_bias="0.07"
+            app:layout_constraintLeft_toRightOf="@id/btn_main_filter"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/btn_main_filter"
+            app:layout_constraintVertical_bias="0.02" />
+
+        <EditText
+            android:id="@+id/search_bar"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/main_search_background"
+            android:hint="@string/search_hint_text"
+            android:inputType="none"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="@id/imgv_main_logo"
+            app:layout_constraintHeight_percent="0.04"
+            app:layout_constraintHorizontal_bias="0.85"
+            app:layout_constraintLeft_toRightOf="@id/imgv_main_logo"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imgv_main_logo"
+            app:layout_constraintWidth_percent="0.6" />
+
+        <ImageView
+            android:id="@+id/imgv_search_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="브레이킹 메인 화면입니다."
+            android:background="@drawable/ic_baseline_search_24"
+            android:translationZ="10dp"
+            app:layout_constraintBottom_toBottomOf="@id/search_bar"
+            app:layout_constraintRight_toRightOf="@id/search_bar"
+            app:layout_constraintTop_toTopOf="@id/search_bar" />
+
+        <ImageView
+            android:id="@+id/imgv_main_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_breaking_logo2"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.025"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.006" />
+
+        <View
+            android:id="@+id/top_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.7dp"
+            android:background="@color/gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imgv_main_logo"
+            app:layout_constraintVertical_bias="0.005" />
+
+        <View
+            android:id="@+id/hashtag_top_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.8dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="3dp"
+            android:background="@color/gray"
+            app:layout_constraintTop_toBottomOf="@id/btn_main_filter" />
+
+        <View
+            android:id="@+id/hashtag_bottom_divider"
+            android:layout_width="match_parent"
+            android:layout_height="0.8dp"
+            android:background="@color/gray"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/rcv_main_hashtag" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_main_hashtag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_top_divider" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_main_feed"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:overScrollMode="never"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarSize="5dp"
+            android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider"
+            app:layout_constraintVertical_bias="0.05" />
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/fab_posting"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:gravity="center"
-            android:theme="@style/FormButton"
-            android:text="@string/post_home_btn"
-            android:textSize="11sp"
-            android:textColor="@color/breaking_color"
-            android:textStyle="bold"
-            android:textAppearance="@style/AppTextAppearance.Button"
             android:backgroundTint="@color/main_post_button_color"
-            app:strokeColor="@color/breaking_drawer_color"
-            app:layout_constraintWidth_percent="0.27"
-            app:layout_constraintHeight_percent="0.06"
-            app:layout_constraintTop_toTopOf="parent"
+            android:drawableLeft="@drawable/ic_baseline_add_24"
+            android:gravity="center_vertical"
+            android:text="@string/post_home_btn"
+            android:textAppearance="@style/AppTextAppearance.Button"
+            android:textColor="@color/breaking_color"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:theme="@style/FormButton"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.98"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.05"
             app:layout_constraintStart_toStartOf="parent"
-           />
-
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.98"
+            app:layout_constraintWidth_percent="0.28"
+            app:strokeColor="@color/breaking_drawer_color" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
