--- a/Breaking/app/src/main/res/drawable/ic_baseline_thumb_up_alt_24.xml
+++ b/Breaking/app/src/main/res/drawable/ic_baseline_thumb_up_alt_24.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="26dp"
-    android:height="26dp"
-    android:tint="#000000"
+    android:width="22dp"
+    android:height="22dp"
+    android:tint="@color/sign_up_input_hint_text_color"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
