--- a/Breaking/app/src/main/res/layout/item_post_list.xml
+++ b/Breaking/app/src/main/res/layout/item_post_list.xml
@@ -21,7 +21,7 @@
         android:adjustViewBounds="true"
         android:background="@drawable/ic_baseline_thumb_up_alt_24"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.985"
+        app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/tv_post_like_count"
         app:layout_constraintTop_toBottomOf="@id/imgv_post_thumbnail"
@@ -33,13 +33,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHeight_percent="0.945"
+        app:layout_constraintHeight_percent="0.96"
         app:layout_constraintHorizontal_bias="0.04"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgv_post_thumbnail"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.3" />
+        app:layout_constraintWidth_percent="0.29" />
 
     <ImageView
         android:id="@+id/imgv_post_location_icon"
@@ -51,6 +51,17 @@
         app:layout_constraintTop_toTopOf="@id/tv_post_time"
         app:layout_constraintVertical_bias="0.6"
         app:layout_constraintWidth_percent="0.045" />
+
+    <ImageView
+        android:id="@+id/imgv_comment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_baseline_comment_24"
+        app:layout_constraintBottom_toBottomOf="@id/img_btn_post_like"
+        app:layout_constraintHorizontal_bias="0.993"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/tv_post_comment_count"
+        app:layout_constraintTop_toTopOf="@id/img_btn_post_like" />
 
     <TextView
         android:id="@+id/tv_chip_exclusive"
@@ -66,7 +77,7 @@
         android:paddingBottom="2dp"
         android:text="@string/exclusive_string"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0"
@@ -90,7 +101,7 @@
         android:paddingBottom="2dp"
         android:text="@string/sold_string"
         android:textColor="@color/white"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="1"
         app:layout_constraintLeft_toRightOf="@id/tv_chip_exclusive"
@@ -98,7 +109,6 @@
         app:layout_constraintTop_toBottomOf="@id/tv_post_price" />
 
     <TextView
-
         android:id="@+id/tv_chip_unsold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -111,7 +121,7 @@
         android:paddingBottom="2dp"
         android:text="@string/is_selling_string"
         android:textColor="@color/breaking_color"
-        android:textSize="10sp"
+        android:textSize="9sp"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toRightOf="@id/tv_chip_sold"
@@ -123,7 +133,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:text="닉네임 테스트요"
         android:textColor="@color/black"
         android:textSize="10sp"
         android:textStyle="bold"
@@ -152,11 +161,21 @@
         android:id="@+id/tv_post_like_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="500"
+        android:layout_marginEnd="5dp"
         android:textColor="@color/black"
-        android:textSize="10sp"
+        android:textSize="9sp"
         app:layout_constraintBottom_toBottomOf="@id/img_btn_post_like"
-        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintRight_toLeftOf="@+id/imgv_comment"
+        app:layout_constraintTop_toTopOf="@id/img_btn_post_like" />
+
+    <TextView
+        android:id="@+id/tv_post_comment_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="9sp"
+        app:layout_constraintBottom_toBottomOf="@id/img_btn_post_like"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/img_btn_post_like" />
 
@@ -166,20 +185,18 @@
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="A씨 사내 비리 폭로 제목테스트제목테스트제목테스트제목테스트제목테스트제목테스트제목테스트제목테스트..."
         android:textColor="@color/black"
         android:textSize="13.5sp"
-        app:layout_constraintHorizontal_bias="0.9"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintLeft_toRightOf="@id/imgv_post_thumbnail"
         app:layout_constraintRight_toLeftOf="@id/img_btn_post_more_menu"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.55" />
+        app:layout_constraintWidth_percent="0.57" />
 
     <TextView
         android:id="@+id/tv_post_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="구로동"
         android:textColor="@color/breaking_color"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -192,7 +209,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
-        android:text="12시간 전"
         android:textSize="10sp"
         app:layout_constraintLeft_toRightOf="@id/tv_split_dot"
         app:layout_constraintTop_toTopOf="@id/tv_post_location" />
@@ -214,7 +230,6 @@
         android:id="@+id/tv_post_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1,000원"
         android:textColor="@color/black"
         android:textSize="13sp"
         android:textStyle="bold"
