--- a/Breaking/app/src/main/res/layout/fragment_navi_home.xml
+++ b/Breaking/app/src/main/res/layout/fragment_navi_home.xml
@@ -30,7 +30,7 @@
 
         <Button
             android:id="@+id/btn_main_sort"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/main_button_background"
             android:drawableStart="@drawable/ic_baseline_sort_24"
@@ -43,7 +43,8 @@
             app:layout_constraintLeft_toRightOf="@id/btn_main_filter"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/btn_main_filter"
-            app:layout_constraintVertical_bias="0.02" />
+            app:layout_constraintVertical_bias="0.02"
+            app:layout_constraintWidth_percent="0.25" />
 
         <EditText
             android:id="@+id/search_bar"
@@ -83,6 +84,32 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.006" />
 
+        <ProgressBar
+            android:id="@+id/progressbar_loading"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:indeterminateTint="@color/breaking_color"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider" />
+
+        <TextView
+            android:id="@+id/tv_no_feed_alert"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:text="@string/no_feed_text"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/hashtag_bottom_divider"
+            app:layout_constraintVertical_bias="0" />
+
         <View
             android:id="@+id/top_divider"
             android:layout_width="match_parent"
@@ -98,9 +125,9 @@
             android:id="@+id/hashtag_top_divider"
             android:layout_width="match_parent"
             android:layout_height="0.8dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="3dp"
+            android:layout_marginTop="8dp"
             android:background="@color/gray"
+            app:layout_constraintBottom_toTopOf="@id/rcv_main_feed"
             app:layout_constraintTop_toBottomOf="@id/btn_main_filter" />
 
         <View
